plugins {
    id 'java'
    id 'jacoco'
    id 'maven-publish'
    id 'org.owasp.dependencycheck' version '9.0.9'
    id 'org.asciidoctor.jvm.convert' version '4.0.2'
    id 'java-gradle-plugin'
    id 'com.gradle.plugin-publish' version '1.2.1'
    id 'signing'
}

// 여러 에이전트/터미널이 같은 체크아웃에서 동시에 빌드를 돌릴 때 build/ 산출물(컴파일된
// 클래스, jacoco exec/report)이 서로 덮어써지는 것을 막기 위한 탈출구. 지정 안 하면
// 평소처럼 build/ 그대로 쓴다. 사용 예: ./gradlew -PagentBuildDir=/tmp/agent1-build ...
if (project.hasProperty('agentBuildDir')) {
    layout.buildDirectory.set(file(agentBuildDir))
}

group = 'io.github.search5.hg4j'
version = '1.0.0'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    withSourcesJar()
    withJavadocJar()
}

dependencies {
    implementation 'org.apache.commons:commons-compress:1.26.1'
    implementation 'com.github.luben:zstd-jni:1.5.6-3'
    implementation 'com.github.mwiede:jsch:0.2.17'
    implementation 'org.bouncycastle:bcpg-jdk18on:1.78'
    implementation 'org.bouncycastle:bcprov-jdk18on:1.78'
    implementation 'org.bouncycastle:bcutil-jdk18on:1.78'
    // HgHttpWireServer is a jakarta.servlet.http.HttpServlet -- callers/tests host it in whatever
    // servlet container they like (only the API is a compile/runtime dependency of the library
    // itself; the container is a test-only concern, see the jetty-ee11 deps below).
    implementation 'jakarta.servlet:jakarta.servlet-api:6.1.0'

    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testImplementation 'org.bouncycastle:bcpg-jdk18on:1.78'
    testImplementation 'org.bouncycastle:bcprov-jdk18on:1.78'
    testImplementation 'org.bouncycastle:bcutil-jdk18on:1.78'

    testImplementation 'org.apache.sshd:sshd-core:2.12.0'
    testImplementation 'org.apache.sshd:sshd-common:2.12.0'
    testImplementation 'org.slf4j:slf4j-simple:2.0.12'
    // Embedded servlet container to actually host HgHttpWireServer in tests (ee11 = Jakarta EE 11 /
    // Servlet 6.1, matching jakarta.servlet-api above).
    testImplementation 'org.eclipse.jetty:jetty-server:12.1.12'
    testImplementation 'org.eclipse.jetty.ee11:jetty-ee11-servlet:12.1.12'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            pom {
                name = 'hg4j'
                description = 'Pure Java implementation of Mercurial (hg) version control system'
                url = 'https://github.com/hg4j/hg4j'
                licenses {
                    license {
                        name = 'The Apache License, Version 2.0'
                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                    }
                }
                developers {
                    developer {
                        id = 'hg4j'
                        name = 'hg4j contributors'
                    }
                }
                scm {
                    connection = 'scm:git:git://github.com/hg4j/hg4j.git'
                    developerConnection = 'scm:git:ssh://github.com/hg4j/hg4j.git'
                    url = 'https://github.com/hg4j/hg4j'
                }
            }
        }
    }
}

jar {
    from("${rootDir}") {
        include 'LICENSE'
        into 'META-INF'
    }
}

test {
    useJUnitPlatform {
        excludeTags 'interop'
    }
    maxHeapSize = "2048m"
    maxParallelForks = 1
    forkEvery = 100
    // Force complete inclusion of runtime configurations to prevent JPMS/testRuntime resolution drops
    classpath = sourceSets.test.runtimeClasspath + project.configurations.testRuntimeClasspath
    finalizedBy jacocoTestReport
}

// Real hg CLI / Docker 기반 interop 테스트(@Tag("interop"))는 기본 `test`에서 제외되고
// 이 태스크로만 돈다 -- 매트릭스가 커지면서 기본 테스트 루프가 계속 느려지는 문제를
// 해결하기 위해 2026-09-04 분리(사용자 지시). `./gradlew interopTest`로 명시적으로 실행.
tasks.register('interopTest', Test) {
    group = 'verification'
    description = 'Runs real hg CLI / Docker 기반 interop 테스트만(@Tag("interop")). 느리고 hg/Docker 설치가 필요함.'
    useJUnitPlatform {
        includeTags 'interop'
    }
    maxHeapSize = "2048m"
    maxParallelForks = 1
    forkEvery = 100
    classpath = sourceSets.test.runtimeClasspath + project.configurations.testRuntimeClasspath
    testClassesDirs = sourceSets.test.output.classesDirs
    binaryResultsDirectory = layout.buildDirectory.dir("interop-test-results/binary")
    reports {
        html.outputLocation = layout.buildDirectory.dir("reports/interop-tests")
        junitXml.outputLocation = layout.buildDirectory.dir("interop-test-results/xml")
    }
}

jacoco {
    toolVersion = "0.8.11"
}

jacocoTestReport {
    // interopTest도 합쳐야 실제 커버리지를 정확히 반영한다 -- PushCommand/ShelveCommand/
    // TagCommand/Bundle2Parser 등 여러 핵심 클래스가 real hg CLI/Docker 기반 interop
    // 테스트로만 커버되는 경로가 많다(2026-09-04, test/interopTest 분리 직후 실측 확인:
    // interopTest 없이는 이 클래스들이 90% 클래스별 규칙에서 전부 미달로 떨어짐). 평소
    // 빠른 `test`는 그대로 두고, 커버리지 집계는 두 태스크의 실행 데이터를 합쳐서 계산.
    dependsOn test, interopTest
    executionData test, interopTest
    reports {
        xml.required = true
        html.required = true
    }
}

jacocoTestCoverageVerification {
    dependsOn test, interopTest
    executionData test, interopTest
    violationRules {
        // 규칙 1: 전체 번들 커버리지 (최소 70% - 네트워크 의존 클래스 제외 전 기준)
        rule {
            element = 'BUNDLE'
            limit {
                minimum = 0.70
            }
        }
        // 규칙 2: 클래스 별 90% 규칙 (외부 의존성이 없는 핵심 클래스만 적용)
        rule {
            element = 'CLASS'
            includes = [
                'io.github.search5.hg4j.dirstate.Dirstate',
                'io.github.search5.hg4j.util.NodeIdUtil',
                'io.github.search5.hg4j.util.SafeFileIO',
                'io.github.search5.hg4j.merge.Merge3',
                'io.github.search5.hg4j.bundle.Bundle2Parser',
                'io.github.search5.hg4j.bundle.ChangegroupParser',
                'io.github.search5.hg4j.api.AddCommand',
                'io.github.search5.hg4j.api.BookmarkCommand',
                'io.github.search5.hg4j.api.BranchCommand',
                'io.github.search5.hg4j.api.InitCommand',
                'io.github.search5.hg4j.api.LogCommand',
                'io.github.search5.hg4j.api.RemoveCommand',
                'io.github.search5.hg4j.api.RevertCommand',
                'io.github.search5.hg4j.api.ShelveCommand',
                'io.github.search5.hg4j.api.StatusCommand',
                'io.github.search5.hg4j.api.TagCommand',
                'io.github.search5.hg4j.api.PushCommand',
                'io.github.search5.hg4j.api.CatCommand',
                'io.github.search5.hg4j.api.DiffCommand',
                'io.github.search5.hg4j.api.TreeCommand',
                'io.github.search5.hg4j.api.UpdateCommand',
            ]
            limit {
                minimum = 0.90
            }
        }
    }
}

check.dependsOn jacocoTestCoverageVerification

dependencyCheck {
    autoUpdate = true
    failBuildOnCVSS = 7.0f
    format = 'ALL'
}

compileJava {
    exclude 'module-info.java'
}

// 2번: Javadoc 다국어(영문/국문) 빌드 설정
javadoc {
    failOnError = false
    options {
        encoding = 'UTF-8'
        docEncoding = 'UTF-8'
        charSet = 'UTF-8'
        locale = 'en_US' // 기본 영어 로케일 설정
        addStringOption('Xdoclint:none', '-quiet')
    }
}

task javadocKo(type: Javadoc) {
    source = sourceSets.main.allJava
    classpath = sourceSets.main.compileClasspath
    destinationDir = file("${buildDir}/docs/javadoc-ko")
    failOnError = false
    options {
        encoding = 'UTF-8'
        docEncoding = 'UTF-8'
        charSet = 'UTF-8'
        locale = 'ko_KR' // 한국어 로케일 설정
        addStringOption('Xdoclint:none', '-quiet')
    }
}

// 1번: Asciidoctor 다국어 문서화 태스크 설정
asciidoctor {
    sourceDir  file('src/docs/asciidoc')
    sources {
        include '**/index.adoc'
    }
    outputDir file('build/docs/asciidoc')
    options doctype: 'book'
    attributes 'source-highlighter': 'coderay',
               'toc': 'left',
               'icons': 'font',
               'sectnums': ''
}

// Gradle Plugin Portal 배포를 위한 플러그인 정의 설정
gradlePlugin {
    website = 'https://github.com/hg4j/hg4j'
    vcsUrl = 'https://github.com/hg4j/hg4j.git'
    plugins {
        hg4jPlugin {
            id = 'io.github.search5.hg4j'
            displayName = 'hg4j Gradle SCM Plugin'
            description = 'Pure Java Mercurial (hg) Gradle integration plugin modeled after JGit.'
            tags.set(['mercurial', 'hg', 'vcs', 'hg4j'])
            implementationClass = 'io.github.search5.hg4j.HgPlugin'
        }
    }
}

// 3번: GPG 아티팩트 서명 설정 (Maven Central 배포 필수 요건)
signing {
    // 실제 저장소에 배포하는 태스크가 수행될 때만 서명을 강력히 의무화하여 로컬 단순 빌드 시 깨지는 현상 방지
    required { gradle.taskGraph.hasTask("publish") || gradle.taskGraph.hasTask("publishToMavenLocal") }
    sign publishing.publications.mavenJava
}

// Gradle 9 암시적 태스크 종속성 경고 및 충돌 방지 설정
tasks.withType(PublishToMavenRepository).configureEach {
    mustRunAfter(tasks.withType(Sign))
}
tasks.withType(PublishToMavenLocal).configureEach {
    mustRunAfter(tasks.withType(Sign))
}
